--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -75,55 +75,86 @@ custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
 
 # ========== 分流规则配置 ==========
-# 基础规则
+# 基础规则 - 优先级最高
 ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt
-ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Advertising/Advertising.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt
+# 使用整合的广告拦截规则
+ruleset=💩广告,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt
+# 额外的恶意网址和隐私保护规则
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Hijacking/Hijacking.yaml
+ruleset=💩广告,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Privacy/Privacy.yaml
 
-# 国内应用规则
-ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/UnionPay/UnionPay.list
-ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AliPay/AliPay.list
-ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChatPay/WeChatPay.list
+# 常见DNS污染问题域名
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject-domain.txt
+
+# 金融类应用规则 - 高安全性需求
+ruleset=🏦金融理财,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Finance/Finance.yaml
+
+# 国内应用规则 - 优先处理特殊需求应用
+# 微信单独处理(避免朋友圈图片无法加载)
 ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/WeChat/WeChat.list
-ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance.list
+# 整合国内应用规则
+ruleset=📊国内应用,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/applications.txt
+# B站单独处理以支持港澳台解锁
+ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
+# 中国媒体整合规则
+ruleset=📊国内应用,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cnmedia.txt
+# 音乐服务
 ruleset=🎵音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEaseMusic/NetEaseMusic.list
 ruleset=🎵音乐,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/QQMusic/QQMusic.list
-ruleset=🎮国内游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Tencent/Tencent.list
-ruleset=🎮国内游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/NetEase/NetEase.list
-ruleset=☁️云服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AlibabaCloud/AlibabaCloud.list
-ruleset=☁️云服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TencentCloud/TencentCloud.list
+# 国内游戏规则
+ruleset=🎮国内游戏,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/GameCN.yaml
+# 国内云服务规则
+ruleset=☁️云服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Cloud/CloudCN/CloudCN.yaml
 
 # 系统服务规则
-ruleset=🍎苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🍎苹果服务,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/apple.txt
+ruleset=Ⓜ️微软服务,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/microsoft.txt
 
-# 国际服务规则
-ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
+# 国际服务规则 - 按需分流
+# 开发工具与学术资源 - 常用优先
 ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/AI/AI.yaml
-ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
-ruleset=📱电报,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Facebook/Facebook.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Reddit/Reddit.list
-ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Developer/Developer.yaml
+ruleset=🧰开发工具,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Scholar/Scholar.list
 
-# 流媒体规则
-ruleset=🎬Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-ruleset=🎬YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
+# AI服务 - 独立分流以优化体验
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Claude/Claude.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Gemini/Gemini.list
+ruleset=🤖AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Anthropic/Anthropic.list
+
+# 常用国际服务
+ruleset=🛡️Google服务,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/google.txt
+ruleset=📱电报,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegram.txt
+ruleset=📧邮件服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Mail/Mail.list
+ruleset=🔎搜索引擎,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SearchEngine/SearchEngine.yaml
+
+# 社交媒体规则 - 使用官方维护规则
+ruleset=📲社交媒体,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/twitter.txt
+ruleset=📲社交媒体,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/facebook.txt
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Instagram/Instagram.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Discord/Discord.list
+ruleset=📲社交媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Whatsapp/Whatsapp.list
+
+# 流媒体规则 - 主流平台优先
+ruleset=🎬Netflix,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/netflix.txt
+ruleset=🎬YouTube,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/youtube.txt
 ruleset=🟢Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-ruleset=📺B站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
+# 全球流媒体整合规则
+ruleset=🎬流媒体,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/globalmedia.txt
+
+# 游戏规则
 ruleset=🎮游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Game/Game.list
 
-# 通用规则
-ruleset=🛩️墙内,https://raw.githubusercontent.com/moistrr/Clashruleset/refs/heads/main/config/zhilian.list
-ruleset=🛩️墙内,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ChinaMax/ChinaMax.list
-ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
+# 国别分流规则 - 基于域名和IP
 ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
 ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/greatfire.txt
+ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/tld-not-cn.txt
+
+# 中国IP地址段 - 放在靠后位置作为补充
+ruleset=🛩️墙内,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt
 
 # 兜底规则
 ruleset=🛩️墙内,[]GEOIP,LAN,no-resolve
@@ -223,7 +254,24 @@ dns:
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  # 添加更多域名到fake-ip过滤列表，避免特定应用问题
   fake-ip-filter:
+    - '+.stun.*.*'
+    - '+.stun.*.*.*'
+    - '+.stun.*.*.*.*'
+    - '+.stun.*.*.*.*.*'
+    - 'lens.l.google.com'
+    - '*.n.n.srv.nintendo.net'
+    - '+.srv.nintendo.net'
+    - '+.stun.playstation.net'
+    - '+.xboxlive.com'
+    - 'xbox.*.microsoft.com'
+    - '+.msftncsi.com'
+    - '+.msftconnecttest.com'
+    - '*.msftncsi.com'
+    - '*.msftconnecttest.com'
+    - '*.mcdn.bilivideo.cn'
+    # 常见国内应用域名
     - '*.lan'
     - 'localhost.ptlogin2.qq.com'
     - '*.qq.com'
@@ -234,7 +282,6 @@ dns:
     - '*.baidu.com'
     - '*.weixin.qq.com'
     - 'mtalk.google.com'
-    - 'lens.l.google.com'
     - 'dl.google.com'
     - 'dl.l.google.com'
     - 'update.googleapis.com'
@@ -339,34 +386,43 @@ dns:
     - '*.baidupan.com'
     - '*.bdimg.com'
     - '*.bcebos.com'
-  use-hosts: true
-  nameserver-cache-size: 8192  # 增加缓存大小
-  cache-size: 16384  # 增加总体缓存大小
-  cache-expire: 1200  # 减少缓存过期时间，更频繁更新
-  prefer-h3: true  # 使用HTTP/3查询，提高速度
 
+  # 优化DNS服务器配置
+  use-hosts: true
+  nameserver-cache-size: 8192
+  cache-size: 16384
+  cache-expire: 1200
+  prefer-h3: true
+
+  # 中国大陆DNS - 针对于中国网络环境优化
   default-nameserver:
     - 223.6.6.6   # 阿里DNS
     - 119.29.29.29 # 腾讯DNS
     - 114.114.114.114 # 114DNS备用
-    - 120.53.53.53 # SDNS，中国电信劫持DNS的替代
+    - 180.184.1.1 # 360 DNS，新增可靠选项
+    - 120.53.53.53 # SDNS
 
+  # DoH和DoT优先，提高安全性
   nameserver:
-    - https://dns.alidns.com/dns-query # 阿里DOH
-    - https://doh.pub/dns-query # 腾讯DOH
-    - https://doh.360.cn/dns-query # 360安全DNS
-    - https://1.12.12.12/dns-query # DNS派DOH
-    - 223.5.5.5 # 阿里备用
-    - 119.29.29.29 # 腾讯备用
+    - https://doh.pub/dns-query # 腾讯DNSPod DoH
+    - https://dns.alidns.com/dns-query # 阿里云公共DNS DoH
+    - https://120.53.53.53/dns-query # 腾讯DNSPod备用DoH
+    - https://doh.360.cn/dns-query # 360安全DNS DoH
+    - tls://dot.pub:853 # 腾讯DNSPod DoT
+    - 223.5.5.5 # 阿里DNS
+    - 119.29.29.29 # 腾讯DNS
 
+  # 国际DNS服务，用于解析国外域名
   fallback:
-    - https://dns.google/dns-query
-    - https://cloudflare-dns.com/dns-query
-    - https://doh.opendns.com/dns-query
-    - tls://1.1.1.1:853 # Cloudflare DOT
-    - tls://8.8.8.8:853 # Google DOT
-    - https://dns.twnic.tw/dns-query # 台湾DOH，可能在大陆连接较好
+    - https://dns.google/dns-query # Google DoH
+    - https://cloudflare-dns.com/dns-query # Cloudflare DoH
+    - https://doh.opendns.com/dns-query # OpenDNS DoH
+    - https://dns.quad9.net/dns-query # Quad9 DoH，安全性高
+    - tls://1.1.1.1:853 # Cloudflare DoT
+    - tls://8.8.8.8:853 # Google DoT
+    - https://dns.twnic.tw/dns-query # 台湾DoH，可能在大陆连接较好
 
+  # 优化fallback-filter，增强针对性
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -383,30 +439,46 @@ dns:
       - 198.51.100.0/24
       - 203.0.113.0/24
       - 224.0.0.0/4
+    # 针对国际服务的重要域名
     domain:
       - '+.google.com'
+      - '+.googleapis.com'
+      - '+.firebase.com'
+      - '+.gstatic.com'
       - '+.facebook.com'
+      - '+.fbcdn.net'
       - '+.youtube.com'
+      - '+.ytimg.com'
+      - '+.ggpht.com'
       - '+.github.com'
+      - '+.githubusercontent.com'
       - '+.twitter.com'
+      - '+.twimg.com'
       - '+.instagram.com'
+      - '+.cdninstagram.com'
       - '+.netflix.com'
+      - '+.nflxext.com'
+      - '+.nflxvideo.net'
+      - '+.nflximg.net'
       - '+.openai.com'
+      - '+.anthropic.com'
+      - '+.claude.ai'
       - '+.telegram.org'
+      - '+.t.me'
       - '+.discord.com'
+      - '+.discord.gg'
+      - '+.discordapp.com'
       - '+.medium.com'
       - '+.reddit.com'
+      - '+.redd.it'
       - '+.spotify.com'
+      - '+.spoti.fi'
       - '+.linkedin.com'
       - '+.notion.so'
       - '+.dropbox.com'
       - '+.twitch.tv'
       - '+.wikipedia.org'
       - '+.wikimedia.org'
-      - '+.reuters.com'
-      - '+.bbc.com'
-      - '+.cnn.com'
-      - '+.nytimes.com'
 
 # 网络优化与电池保护
 url-test-interval: 7200  # 2小时测试，更省电
