--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -27,37 +27,33 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # ========== 代理分组配置 ==========
-custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
-custom_proxy_group=🛩️墙内`select`[]DIRECT`[]✈️起飞
-custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT`[]✈️起飞
-custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]DIRECT`[]👆🏻指定
-custom_proxy_group=🔒隐私保护`select`[]REJECT`[]✈️起飞`[]DIRECT
-
-# 自动测速与手动选择组
+# 主要代理策略
+custom_proxy_group=✈️起飞`select`[]⚡低延迟`[]🇭🇰香港`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🇹🇼台湾`[]🎏其他`[]👆🏻指定`[]DIRECT`[]REJECT
 custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 custom_proxy_group=👆🏻指定`select`.*
 
-# 国内应用精简分组 - 移动设备常用
-custom_proxy_group=📊国内应用`select`[]DIRECT`[]✈️起飞
-custom_proxy_group=🏦金融理财`select`[]DIRECT
-custom_proxy_group=📱短视频`select`[]DIRECT`[]🛩️墙内
-custom_proxy_group=🛒购物平台`select`[]DIRECT
-custom_proxy_group=💬社交聊天`select`[]DIRECT`[]🛩️墙内
-custom_proxy_group=🗺️地图出行`select`[]DIRECT
-
-# 国际服务精简分组 - 移动设备常用
-custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
-custom_proxy_group=📲社交媒体`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
-custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇹🇼台湾`[]🇸🇬新加坡`[]🇯🇵日本`[]✈️起飞
-custom_proxy_group=🛡️Google服务`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
-
-# 地区分组 - 自动测速选择最佳节点
 custom_proxy_group=🇭🇰香港`url-test`(?i)港|hongkong|hk`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬新加坡`url-test`(?i)新|狮|獅|singapore|sg`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵日本`url-test`(?i)日|japan|jp`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇸美国`url-test`(?i)美|states|us`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼台湾`url-test`(?i)台|taiwan|tw`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎏其他`select`^(?!.*(港|hongkong|hk|台|taiwan|tw|新|狮|獅|singapore|sg|日|japan|jp|美|states|us)).*$
+
+custom_proxy_group=🛡️Google服务`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇺🇸美国`[]🇯🇵日本`[]🇹🇼台湾`[]🎏其他
+custom_proxy_group=📲社交媒体`select`[]✈️起飞`[]🇸🇬新加坡`[]🇭🇰香港`[]🇺🇸美国`[]🇯🇵日本`[]🇹🇼台湾`[]🎏其他
+custom_proxy_group=🎬流媒体`select`[]✈️起飞`[]🇭🇰香港`[]🇸🇬新加坡`[]🇹🇼台湾`[]🇯🇵日本`[]🇺🇸美国`[]🎏其他
+custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇸🇬新加坡`[]🇯🇵日本`[]🇹🇼台湾`[]✈️起飞
+
+custom_proxy_group=💬社交聊天`select`[]DIRECT`[]🛩️墙内
+custom_proxy_group=📱短视频`select`[]DIRECT`[]🛩️墙内
+custom_proxy_group=🛒购物平台`select`[]DIRECT
+custom_proxy_group=🏦金融理财`select`[]DIRECT
+custom_proxy_group=🗺️地图出行`select`[]DIRECT
+custom_proxy_group=📊国内应用`select`[]DIRECT`[]✈️起飞
+custom_proxy_group=💩广告`select`[]REJECT`[]DIRECT`[]✈️起飞
+custom_proxy_group=🔒隐私保护`select`[]REJECT`[]✈️起飞`[]DIRECT
+custom_proxy_group=🛩️墙内`select`[]DIRECT`[]✈️起飞
+custom_proxy_group=🐟漏网之鱼`select`[]✈️起飞`[]🛩️墙内`[]DIRECT`[]👆🏻指定
 
 # ========== 分流规则配置 ==========
 # 基础规则
@@ -167,7 +163,9 @@ dns:
     - '+.msftncsi.com'
     - '+.msftconnecttest.com'
     - '+.steamcontent.com'
-      nameserver:
+    - '+.voip.apple.com'  # FaceTime和iMessage
+    - '+.push.apple.com'  # 推送服务
+  nameserver:
     - 223.5.5.5  # 阿里DNS
     - h3://dns.alidns.com/dns-query  # 优先使用更节能的H3模式
   fallback:
