--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -90,7 +90,7 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 ruleset=🐟漏网之鱼,[]FINAL
 
-# ========== Clash核心配置 - 移动设备深度优化 ==========
+# ========== Clash核心配置 - 中国大陆移动设备专用优化 ==========
 mixed-port: 7890
 allow-lan: true
 bind-address: '*'
@@ -101,14 +101,15 @@ external-controller: 127.0.0.1:9090
 profile:
   store-selected: true
   store-fake-ip: true
+  tracing: false  # 禁用追踪功能，降低电量消耗
 
-# 移动设备性能和电池优化
+# 中国移动设备电池优化
 unified-delay: true
 tcp-concurrent: true
-keep-alive-interval: 45  # 增加间隔以节省电量
-find-process-mode: off
+keep-alive-interval: 120  # 大幅增加保活间隔至120秒，极大节省电量
+find-process-mode: off   # 禁用进程查找，避免额外CPU使用
 
-# 移动设备节能型嗅探配置
+# 适合中国移动网络的嗅探配置
 sniffer:
   enable: true
   parse-pure-ip: true
@@ -118,27 +119,36 @@ sniffer:
     HTTP:
       ports: [80, 8080]
   skip-domain:
-    - '*.alipay.com'
-    - '*.taobao.com'
-    - '*.qq.com'
-    - '*.weixin.qq.com'
-    - '+.baidu.com'
+    - '*.alipay.com'  # 支付宝
+    - '*.taobao.com'  # 淘宝
+    - '*.qq.com'      # QQ
+    - '*.weixin.qq.com'  # 微信
+    - '+.baidu.com'   # 百度
     - '+.networkbench.com'
-    - '+.umeng.com'  # 移动应用统计服务
+    - '+.umeng.com'   # 友盟统计
     - '+.umengcloud.com'
+    - '+.jpush.cn'    # 极光推送
+    - '+.getui.com'   # 个推
+    - '+.jiguang.cn'  # 极光
+    - '+.qlogo.cn'    # QQ图片
+    - '+.gtimg.cn'    # 腾讯图片
+    - '+.weixin.qq.com'  # 微信服务
+    - '+.qpic.cn'     # QQ图片
+    - '+.tencent-cloud.net'  # 腾讯云
 
-# 移动设备优化的TUN配置
+# 中国移动设备TUN优化
 tun:
   enable: true
-  stack: system
+  stack: system  # 系统自动选择最佳堆栈
   auto-route: true
   auto-detect-interface: true
   dns-hijack:
     - 'any:53'
-    - '8.8.8.8:53'
-    - '1.1.1.1:53'
+    - '8.8.8.8:53'    # 拦截谷歌DNS请求，避免泄露
+    - '1.1.1.1:53'    # 拦截Cloudflare DNS请求，避免泄露
+    - '223.5.5.5:53'  # 拦截阿里DNS请求，避免泄露
 
-# 移动设备优化的DNS配置
+# 增强隐私与安全的DNS配置
 dns:
   enable: true
   ipv6: false
@@ -152,14 +162,30 @@ dns:
     - '+.msftncsi.com'
     - '+.msftconnecttest.com'
     - '+.steamcontent.com'
-    - '+.voip.apple.com'  # FaceTime和iMessage
-    - '+.push.apple.com'  # 推送服务
+    - '+.voip.apple.com'    # FaceTime
+    - '+.push.apple.com'    # 推送服务
+    - '+.cmpassport.com'    # 运营商一键登录
+    - '+.jegotrip.com.cn'   # 中国移动服务
+    - '+.icitymobile.mobi'  # 中国移动服务
+    - '+.weixin.qq.com'     # 微信服务
+    - '+.mpush-api.aliyun.com'  # 阿里云推送
+    - '+.pay.weixin.qq.com'  # 微信支付
+    - 'lens.l.google.com'   # 谷歌智能镜头
+    - 'stun.l.google.com'   # 谷歌STUN服务
+
+  # 主要DNS服务器 - 加密优先
   nameserver:
-    - 223.5.5.5  # 阿里DNS
-    - h3://dns.alidns.com/dns-query  # 优先使用更节能的H3模式
+    - https://dns.alidns.com/dns-query  # 阿里加密DNS (主力)
+    - h3://dns.alidns.com/dns-query     # 阿里H3加密DNS (更省电)
+    - 223.5.5.5                         # 阿里普通DNS (备用)
+
+  # 国外域名解析专用
   fallback:
-    - https://dns.google/dns-query
-    - tls://1.1.1.1:853
+    - https://dns.google/dns-query      # 谷歌DoH (国外主力)
+    - tls://8.8.8.8:853                 # 谷歌DoT (备用)
+    - tls://1.1.1.1:853                 # Cloudflare DoT (备用)
+
+  # 精确的DNS分流控制
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -171,26 +197,41 @@ dns:
       - '+.youtube.com'
       - '+.github.com'
       - '+.twitter.com'
-  default-nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
-  proxy-server-nameserver:
-    - https://dns.google/dns-query
+      - '+.instagram.com'
+      - '+.netflix.com'
+      - '+.telegram.org'
+      - '+.discord.com'
+      - '+.reddit.com'
+      - '+.wikipedia.org'
 
-# 移动网络优化
-url-test-interval: 10800  # 3小时测试一次节点，更省电
-test-timeout: 3  # 缩短超时时间
-tolerance: 150
-connection-test-url: https://cp.cloudflare.com/generate_204  # 更快的测试链接
+  # 安全保底DNS
+  default-nameserver:
+    - 223.5.5.5       # 阿里DNS
+    - 119.29.29.29    # 腾讯DNS
+
+  # 代理服务DNS
+  proxy-server-nameserver:
+    - https://dns.alidns.com/dns-query  # 阿里加密DNS
+
+# 中国移动网络优化
+url-test-interval: 10800  # 3小时测试一次，平衡电量消耗与连接质量
+test-timeout: 3           # 测试超时时间
+tolerance: 150            # 容差值
+connection-test-url: https://www.gstatic.com/generate_204  # 保留原始测试链接
+proxy-test-url: https://www.gstatic.com/generate_204  # 保留原始测试链接
 
 # 移动设备指纹和安全
-global-client-fingerprint: chrome
-tcp-connection-reuse: true
-disable-udp-traffic: false
+global-client-fingerprint: chrome  # 固定指纹更省电
+tcp-connection-reuse: true  # 重用TCP连接
 
-# 移动设备自动休眠优化
+# 中国移动网络特定优化
 geodata-mode: false  # 禁用资源密集型地理数据加载
-geodata-loader: memconservative  # 保守的内存使用模式
+geodata-loader: memconservative  # 保守内存使用
+tcp-fast-open: true  # 启用TCP快速打开
+udp-relay-mode: direct  # 直连模式UDP中继
 
-# 流量控制
-find-process-mode: strict
+# DNS安全增强设置
+force-domain: true      # 强制域名解析
+enable-domain-routing: true  # 启用域名路由
+routing-domain-resolve: true # 域名解析路由
+encrypted-dns-routing: true  # 加密DNS路由
