--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -71,6 +71,7 @@ ruleset=🎬流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_sc
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JingDong/JingDong.yaml
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PinDuoDuo/PinDuoDuo.yaml
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Taobao/Taobao.yaml
+ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml
 ruleset=🗺️地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GaoDe/GaoDe.yaml
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.yaml
 ruleset=🛡️Google服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleDrive/GoogleDrive.yaml
