--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -260,15 +260,17 @@ dns:
     - '+.app-measurement.com'  # 谷歌分析服务
     - '+.firebase*.com'     # Firebase推送
 
-  # DNS服务器
+  # DNS服务器 - 优先使用HTTPS加密DNS
   nameserver:
-    - h3://223.5.5.5/dns-query
-    - 223.5.5.5
-    - 119.29.29.29
+    - https://dns.alidns.com/dns-query  # 阿里DNS加密
+    - https://doh.pub/dns-query         # 腾讯DNS加密
+    - 223.5.5.5                         # 阿里备用
+    - 119.29.29.29                      # 腾讯备用
 
   fallback:
-    - h3://8.8.8.8/dns-query
-    - https://dns.google/dns-query
+    - https://dns.google/dns-query      # Google加密DNS
+    - https://cloudflare-dns.com/dns-query  # Cloudflare加密DNS
+    - tls://1.1.1.1:853                 # Cloudflare TLS加密
 
   fallback-filter:
     geoip: true
@@ -282,10 +284,10 @@ dns:
     - 223.5.5.5
     - 119.29.29.29
 
-  # 标准DNS策略
+  # 标准DNS策略 - 使用HTTPS加密DNS
   nameserver-policy:
-    'geosite:cn': [h3://223.5.5.5/dns-query]
-    'geosite:geolocation-!cn': [h3://8.8.8.8/dns-query]
+    'geosite:cn': [https://dns.alidns.com/dns-query]
+    'geosite:geolocation-!cn': [https://dns.google/dns-query]
 
   cache-size: 4096
   ipv6-timeout: 0
