--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -144,11 +144,10 @@ tun:
   dns-hijack:
     - 'any:53'
   # 增加移动网络优化
-  device: utun0
   mtu: 1400
-  stack: gvisor  # 使用gvisor能更好适应频繁的网络切换
-  strict-route: true  # 严格路由模式
-  endpoint-independent-nat: true  # 独立端点NAT，适合运营商网络
+  stack: gvisor
+  strict-route: true
+  endpoint-independent-nat: true
 
 # DNS配置
 dns:
@@ -157,6 +156,9 @@ dns:
   listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
+  use-hosts: true
+
+  # 增强fake-ip-filter，防止重要域名被fake
   fake-ip-filter:
     - '*.lan'
     - 'stun.*.*'
@@ -176,35 +178,102 @@ dns:
     - '+.jd.com'
     - '+.alipay.com'
     - '+.alicdn.com'
+    # 金融安全
+    - '+.95516.com'      # 银联
+    - '+.bankcomm.com'   # 交通银行
+    - '+.abchina.com'    # 农业银行
+    - '+.ccb.com'        # 建设银行
+    - '+.icbc.com.cn'    # 工商银行
+    - '+.cmbc.com.cn'    # 民生银行
+    - '+.cmbchina.com'   # 招商银行
 
-  # DNS服务器配置
+  # 保底DNS - 使用加密DNS
+  default-nameserver:
+    - 223.5.5.5
+
+  # 国内域名DNS服务器 - 优先使用加密方式
   nameserver:
-    - https://dns.alidns.com/dns-query
+    - 'https://dns.alidns.com/dns-query'      # 阿里加密DNS
+    - 'https://doh.pub/dns-query'             # 腾讯加密DNS
 
-  # 国外域名解析
+  # 国外域名解析 - 全部使用加密DNS提高隐私
   fallback:
-    - https://dns.google/dns-query
-    - https://cloudflare-dns.com/dns-query
-    - 8.8.8.8
-    - 1.1.1.1
+    - 'https://dns.google/dns-query'          # Google加密DNS
+    - 'https://cloudflare-dns.com/dns-query'  # Cloudflare加密DNS
+    - 'https://doh.opendns.com/dns-query'     # OpenDNS加密DNS
 
-  # DNS分流控制
+  # DNS分流控制 - 精细分流
   fallback-filter:
     geoip: true
     geoip-code: CN
     ipcidr:
       - 240.0.0.0/4
+      - 0.0.0.0/32
+    # 国外常用网站域名，使用国外DNS
     domain:
+      # 谷歌全家桶
       - '+.google.com'
+      - '+.googleapis.com'
+      - '+.gmail.com'
+      - '+.gstatic.com'
       - '+.youtube.com'
-      - '+.telegram.org'
+      - '+.ytimg.com'
+      - '+.ggpht.com'
+      # 社交媒体
       - '+.twitter.com'
+      - '+.twimg.com'
+      - '+.t.co'
       - '+.facebook.com'
+      - '+.fbcdn.net'
       - '+.instagram.com'
+      - '+.cdninstagram.com'
+      - '+.telegram.org'
+      - '+.telegram.me'
+      - '+.t.me'
+      - '+.tdesktop.com'
+      - '+.telesco.pe'
+      # 流媒体
+      - '+.netflix.com'
+      - '+.nflximg.net'
+      - '+.nflxvideo.net'
+      - '+.nflxso.net'
+      - '+.nflxext.com'
+      - '+.spotify.com'
+      - '+.spotifycdn.com'
+      # 开发相关
+      - '+.github.com'
+      - '+.githubusercontent.com'
+      - '+.githubassets.com'
+      - '+.gitlab.com'
+      # AI服务
+      - '+.openai.com'
+      - '+.oaistatic.com'
+      - '+.oaiusercontent.com'
+      - '+.anthropic.com'
+      - '+.claude.ai'
+      # 其他常用国外服务
+      - '+.wikimedia.org'
+      - '+.wikipedia.org'
+      - '+.reddit.com'
+      - '+.redd.it'
+      - '+.redditstatic.com'
+      - '+.redditmedia.com'
+      - '+.dropbox.com'
+      - '+.medium.com'
+      - '+.quora.com'
 
-  # 保底DNS
-  default-nameserver:
-    - 223.5.5.5
+  # 域名解析策略 - 将重要域名指向加密DNS
+  nameserver-policy:
+    # 金融服务使用加密国内DNS确保安全
+    '+.alipay.com': 'https://dns.alidns.com/dns-query'
+    '+.95516.com': 'https://dns.alidns.com/dns-query'
+    '+.bank': 'https://dns.alidns.com/dns-query'
+    # 社交和通讯服务
+    '+.wechat.com': 'https://doh.pub/dns-query'
+    '+.weixin.qq.com': 'https://doh.pub/dns-query'
+    '+.qq.com': 'https://doh.pub/dns-query'
+    # 默认屏蔽所有广告域名
+    'geosite:category-ads-all': ['rcode://refused']
 
 # 网络测试优化 - 调整为移动网络环境
 url-test-interval: 1800
