--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -126,7 +126,8 @@ ruleset=✈️起飞,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/
 ruleset=🛩️墙内,[]GEOIP,CN,no-resolve
 ruleset=🐟漏网之鱼,[]FINAL
 
-# ========== Clash核心通用配置 ==========
+# ========== Mihomo核心配置 ==========
+# 基础连接设置
 mixed-port: 7890
 allow-lan: true
 bind-address: '*'
@@ -138,18 +139,23 @@ profile:
   store-selected: true
   store-fake-ip: true
 
-# 电池优化
-keep-alive-interval: 180
-find-process-mode: off
+# 移动网络电池优化
+keep-alive-interval: 180        # 适中的保活间隔
+tcp-concurrent: 8               # 为移动网络优化的并发连接数
+unified-delay: true             # 统一延迟测量更准确
+find-process-mode: off          # 禁用进程查找省电
 
-# 嗅探配置
+# 嗅探配置优化
 sniffer:
   enable: true
+  parse-pure-ip: true           # 解析纯IP提高运营商环境准确性
+  override-destination: true
   sniff:
     TLS:
       ports: [443, 8443]
     HTTP:
       ports: [80, 8080]
+      override-destination: true
   skip-domain:
     - '*.alipay.com'
     - '*.taobao.com'
@@ -169,27 +175,26 @@ sniffer:
     - '+.ccb.com'
     - '+.abchina.com'
   force-domain:
-    - '+.cmpassport.com'
-    - '+.10086.cn'
-    - '+.10010.com'
-    - '+.189.cn'
-  skip-cert-verify: true
+    - '+.cmpassport.com'        # 运营商认证域名
+    - '+.10086.cn'              # 中国移动
+    - '+.10010.com'             # 中国联通
+    - '+.189.cn'                # 中国电信
+  skip-cert-verify: true        # 运营商网络可能存在SSL检查
 
-# TUN模式配置
+# TUN模式针对移动网络的配置
 tun:
   enable: true
-  stack: system
-  auto-route: true
-  auto-detect-interface: true
+  stack: gvisor                 # 移动网络下gvisor更可靠
   dns-hijack:
     - 'any:53'
   # 移动网络优化
-  mtu: 1400
-  stack: gvisor
+  auto-route: true
+  auto-detect-interface: true
+  mtu: 1350                     # 更适合移动网络的MTU值
   strict-route: true
   endpoint-independent-nat: true
 
-# DNS配置 - 防止DNS泄露的关键部分
+# DNS配置针对运营商DNS劫持优化
 dns:
   enable: true
   ipv6: false
@@ -218,7 +223,7 @@ dns:
     - '+.jd.com'
     - '+.alipay.com'
     - '+.alicdn.com'
-    # 银行和金融服务
+    # 银行和金融服务保护
     - '+.95516.com'      # 银联
     - '+.bankcomm.com'   # 交通银行
     - '+.abchina.com'    # 农业银行
@@ -231,25 +236,22 @@ dns:
     - '+.citicbank.com'  # 中信银行
     - '+.pingan.com'     # 平安银行
 
-  # 保底DNS - 改用安全的加密DNS
+  # 防劫持基础DNS
   default-nameserver:
-    - 223.5.5.5
-    - 119.29.29.29
+    - 223.5.5.5          # 阿里DNS
+    - 119.29.29.29       # 腾讯DNS
+    - 114.114.114.114    # 114DNS
 
-  # 国内域名DNS服务器 - 优先使用加密方式
+  # 国内域名DNS服务器 - 移动网络友好
   nameserver:
     - 'https://dns.alidns.com/dns-query'      # 阿里加密DNS
-    - 'https://doh.pub/dns-query'             # 腾讯加密DNS
-    - 'https://120.53.53.53/dns-query'        # 腾讯HTTPDNS
 
-  # 国外域名解析 - 全部使用加密DNS提高隐私
+  # 国外域名解析 - 移动网络优化
   fallback:
-    - 'https://dns.google/dns-query'          # Google加密DNS
-    - 'https://cloudflare-dns.com/dns-query'  # Cloudflare加密DNS
-    - 'https://doh.opendns.com/dns-query'     # OpenDNS加密DNS
-    - 'https://dns.quad9.net/dns-query'       # Quad9加密DNS
+    - 'https://dns.google/dns-query'
+    - 'https://cloudflare-dns.com/dns-query'
 
-  # DNS分流控制 - 精细分流
+  # DNS分流控制
   fallback-filter:
     geoip: true
     geoip-code: CN
@@ -326,36 +328,30 @@ dns:
     '+.wechat.com': 'https://doh.pub/dns-query'
     '+.weixin.qq.com': 'https://doh.pub/dns-query'
     '+.qq.com': 'https://doh.pub/dns-query'
-    # 默认屏蔽所有广告域名
+    # 屏蔽广告域名
     'geosite:category-ads-all': ['rcode://refused']
 
-# 网络测试优化
-url-test-interval: 1800
-test-timeout: 2
-max-timeout: 5000
-tolerance: 150
+# 移动网络测试优化
+url-test-interval: 900           # 15分钟测试一次，平衡电池和性能
+test-timeout: 3                  # 适合移动网络的超时时间
+max-timeout: 3000                # 降低最大超时时间适应弱网
+tolerance: 200                   # 增加容忍值适应移动网络波动
+geodata-loader: memconservative  # 内存节约模式
 
-# 性能优化
-routing-mark: 6
-auto-check-update: false
-delay-icmp: 1
-
-# 通用兼容配置
-tcp-fast-open: true
-
-# 移动网络优化
+# 移动网络性能优化
+tcp-fast-open: true                   # 提升连接速度
+tcp-fast-fallback: true               # 提升弱网环境体验
+udp-priority: true                    # 优化移动网络下语音通话
+sniff-tls-sni: true                   # 提高嗅探准确性
 connection-test-url: https://www.gstatic.com/generate_204
-tcp-concurrent: 8
 disable-udp-traffic: false
-geodata-mode: true
-geodata-loader: memconservative
+routing-mark: 6
 
-# 运营商网络防劫持
+# 移动网络安全优化
 firewall-mode: blacklist
-find-process-mode: strict
-force-cert-verify: true
+force-cert-verify: true          # 增强连接安全性
 
-# 断网恢复优化
-secret: ""
-connection-reuse: true
-transport-thread: 4
+# 移动设备内存和电池优化
+connection-reuse: true           # 减少创建连接次数
+transport-thread: 4              # 适合移动设备的线程数
+buffer-size: 16                  # 适合移动设备的缓冲区大小
