--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -76,6 +76,7 @@ ruleset=💬社交聊天,https://raw.githubusercontent.com/blackmatrix7/ios_rule
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/JingDong/JingDong.yaml
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PinDuoDuo/PinDuoDuo.yaml
 ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Taobao/Taobao.yaml
+ruleset=🛒购物平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/XianYu/XianYu.yaml
 
 # 地图和出行
 ruleset=🗺️地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GaoDe/GaoDe.yaml
@@ -85,6 +86,7 @@ ruleset=🗺️地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_r
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bilibili/Bilibili.yaml
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.yaml
+
 
 # 国内常用应用和服务
 ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml
