--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -45,6 +45,7 @@ custom_proxy_group=🤖AI`select`[]🇺🇸美国`[]🇸🇬新加坡`[]🇯🇵
 
 custom_proxy_group=💬社交聊天`select`[]DIRECT`[]🛩️墙内
 custom_proxy_group=📱短视频`select`[]DIRECT`[]🛩️墙内
+custom_proxy_group=📺哔哩哔哩`select`[]DIRECT`[]🇭🇰香港`[]🇹🇼台湾`[]🛩️墙内`[]✈️起飞
 custom_proxy_group=🛒购物平台`select`[]DIRECT
 custom_proxy_group=🏦金融理财`select`[]DIRECT
 custom_proxy_group=🗺️地图出行`select`[]DIRECT
@@ -84,9 +85,22 @@ ruleset=🗺️地图出行,https://raw.githubusercontent.com/blackmatrix7/ios_r
 
 # 国内短视频
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DouYin/DouYin.yaml
-ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Bilibili/Bilibili.yaml
+# 从短视频分组中移除B站规则
 ruleset=📱短视频,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Douyu/Douyu.yaml
 
+# B站专用分流规则 - 针对不同地区内容使用不同策略
+ruleset=📺哔哩哔哩,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
+# 补充B站CDN域名
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,bilivideo.com
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,bilivideo.cn
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,biliapi.net
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,biliapi.com
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,acgvideo.com
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,hdslb.com
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,szbdyd.com
+ruleset=📺哔哩哔哩,DOMAIN-SUFFIX,akamaized.net
+ruleset=📺哔哩哔哩,DOMAIN-KEYWORD,bilibili
+ruleset=📺哔哩哔哩,IP-CIDR,203.107.1.0/24,no-resolve
 
 # 国内常用应用和服务
 ruleset=📊国内应用,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/DingTalk/DingTalk.yaml
@@ -227,6 +241,11 @@ dns:
     - '+.jd.com'
     - '+.alipay.com'
     - '+.alicdn.com'
+    # B站视频域名加入fake-ip-filter
+    - '+.bilivideo.com'
+    - '+.bilivideo.cn'
+    - '+.hdslb.com'
+    - '+.acgvideo.com'
     # 银行和金融服务保护
     - '+.95516.com'      # 银联
     - '+.bankcomm.com'   # 交通银行
